# duckspec

./: AGENTS.md  Cargo.toml  README.md  justfile
.cargo/: config.toml
.claude/commands/: do-something.md  ds-backfill.md  ds-design.md  ds-propose.md  ds-spec.md
crates/duckboard/: Cargo.toml
crates/duckboard/src/: agent.rs  area.rs  chat_store.rs  config.rs  data.rs  highlight.rs  idea_format.rs  idea_store.rs  kanban_store.rs  main.rs  path_env.rs  scope.rs  theme.rs  title_hints.rs  vcs.rs  watcher.rs  widget.rs
crates/duckboard/src/area/: caps.rs  change.rs  codex.rs  dashboard.rs  ideas.rs  interaction.rs  kanban.rs  settings.rs
crates/duckboard/src/widget/: agent_chat.rs  collapsible.rs  diff_view.rs  file_finder.rs  find.rs  horizontal_pan.rs  interaction_toggle.rs  list_view.rs  pan_row.rs  project_picker.rs  quick_idea.rs  sidebar.rs  status_bar.rs  streaming_indicator.rs  structural_view.rs  tab_bar.rs  terminal.rs  text_edit.rs  text_search.rs  tree_view.rs  vertical_scroll.rs
crates/duckboard/src/widget/text_edit/: render.rs  state.rs
crates/duckchat/: Cargo.toml
crates/duckchat/src/: cancel.rs  claude_code.rs  error.rs  event.rs  hook.rs  lib.rs  provider.rs  request.rs  shell_env.rs  worker.rs
crates/duckchat/src/claude_code/: discover.rs  protocol.rs  run.rs  title.rs
crates/duckspec/: Cargo.toml
crates/duckspec/content/commands/claude/: ds-apply.md  ds-archive.md  ds-codex.md  ds-design.md  ds-explore.md  ds-spec.md  ds-step.md
crates/duckspec/content/commands/opencode/: ds-apply.md  ds-archive.md  ds-propose.md  ds-verify.md
crates/duckspec/content/schemas/: codex.md  design.md  doc-delta.md  doc.md  hook.md  project.md  proposal.md  spec-delta.md  spec.md  step.md
crates/duckspec/content/templates/: apply.md  archive.md  backfill.md  codex.md  design.md  explore.md  propose.md  spec.md  step.md  verify.md
crates/duckspec/src/: cmd.rs  main.rs
crates/duckspec/src/cmd/: archive.rs  audit.rs  check.rs  common.rs  create.rs  diff.rs  format.rs  index.rs  init.rs  schema.rs  status.rs  sync.rs  template.rs
crates/duckspec/tests/fixtures/bad-project/duckspec/: project.md
crates/duckspec/tests/fixtures/bad-project/duckspec/caps/auth/: doc.md  spec.md
crates/duckspec/tests/fixtures/bad-project/duckspec/caps/auth/oauth/: doc.md  spec.md
crates/duckspec/tests/fixtures/bad-project/duckspec/changes/bad-change/: design.md  proposal.md
crates/duckspec/tests/fixtures/bad-project/duckspec/changes/bad-change/caps/auth/: doc.delta.md  spec.delta.md
crates/duckspec/tests/fixtures/bad-project/duckspec/changes/bad-change/caps/auth/oauth/: spec.md
crates/duckspec/tests/fixtures/bad-project/duckspec/changes/bad-change/caps/nonexistent/: spec.delta.md
crates/duckspec/tests/fixtures/bad-project/duckspec/changes/bad-change/steps/: 01-wrong-slug.md  02-bad-prereqs.md  03-no-tasks.md
crates/duckspec/tests/fixtures/bad-project/duckspec/codex/: no-heading.md  no-summary.md
crates/duckspec/tests/fixtures/bad-project/src/: lib.rs
crates/duckspec/tests/fixtures/bad-project/tests/: auth_test.rs
crates/duckspec/tests/fixtures/good-project/duckspec/: project.md
crates/duckspec/tests/fixtures/good-project/duckspec/archive/2026-03-15-01-add-oauth/: proposal.md
crates/duckspec/tests/fixtures/good-project/duckspec/archive/2026-03-15-01-add-oauth/caps/auth/oauth/: doc.md  spec.md
crates/duckspec/tests/fixtures/good-project/duckspec/caps/auth/: spec.md
crates/duckspec/tests/fixtures/good-project/duckspec/caps/auth/oauth/: spec.md
crates/duckspec/tests/fixtures/good-project/duckspec/changes/add-two-factor/: design.md  proposal.md
crates/duckspec/tests/fixtures/good-project/duckspec/changes/add-two-factor/caps/auth/: doc.delta.md  spec.delta.md
crates/duckspec/tests/fixtures/good-project/duckspec/changes/add-two-factor/caps/auth/two-factor/: doc.md  spec.md
crates/duckspec/tests/fixtures/good-project/duckspec/changes/add-two-factor/steps/: 01-add-totp-library.md  02-implement-enrollment.md
crates/duckspec/tests/fixtures/good-project/duckspec/codex/: architecture.md  glossary.md
crates/duckspec/tests/fixtures/good-project/src/: lib.rs
crates/duckspec/tests/fixtures/good-project/tests/: auth_test.rs
references/: duckboard.md  duckspec.md
(+182 files in other folders)
