[workspace]
resolver = "3"
members = [
    "crates/duckpond",
    "crates/duckspec",
    "crates/duckboard",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Internal crates
duckpond = { path = "crates/duckpond" }

# External dependencies
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
insta = "1"
