[workspace]
resolver = "3"
members = [
    "crates/duckpond",
    "crates/duckspec",
    "crates/duckboard",
    "crates/duckchat",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Internal crates
duckpond = { path = "crates/duckpond" }
duckchat = { path = "crates/duckchat" }

# External dependencies
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
insta = "1"
miette = "7"
time = "0.3"
toml = "0.8"
ignore = "0.4"
tempfile = "3"

[profile.dev]
debug = "line-tables-only"

[profile.release]
strip = "debuginfo"
