[package]
name = "duckboard"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "duckboard"
path = "src/main.rs"

[dependencies]
duckpond.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

iced = { version = "0.14", features = ["advanced", "canvas"] }
libghostty-vt = "0.1"
portable-pty = "0.9"
tokio = { version = "1", features = ["sync"] }
