[package]
name = "duckboard"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "duckboard"
path = "src/main.rs"

[dependencies]
duckpond.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

iced = { version = "0.14", features = ["advanced", "canvas", "svg", "tokio"] }
alacritty_terminal = "0.26"
vte = "0.15"
portable-pty = "0.9"
tokio = { version = "1", features = ["sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml.workspace = true
dirs = "6"
font-kit = "0.14"
time = { workspace = true, features = ["serde", "local-offset"] }
notify-debouncer-mini = "0.5"
ignore.workspace = true
gix = { version = "0.72", default-features = false, features = ["status"] }
similar = "2"
nucleo = "0.5"
grep-regex = "0.1"
grep-searcher = "0.1"
grep-matcher = "0.1"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "parsing", "plist-load", "regex-fancy"] }
dark-light = "2"
linkify = "0.11"
opener = "0.8"
